Resolve "Bug: Horizontal Scrollbar on all Services"

--- a/prototype/prioss/src/app/app.component.less
+++ b/prototype/prioss/src/app/app.component.less
@@ -13,7 +13,6 @@ main {
 
   @media (min-width: 1210px) {
     max-width: 1200px;
-    padding: 0;
   }
 }
 
